--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Mediazona Israel
-url: https://mediazona.co.il
+url: http://mediazona.co.il
 paginate: 1
 baseurl: ""
 permalink: pretty
