--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Setup
-title: Dark Poole
-url: https://andrewhwanpark.github.io/dark-poole
+title: Mediazona Israel
+url: http://mediazona.co.il
 paginate: 1
-paginate_path: "/dark-poole/page:num/"
-baseurl: "/dark-poole"
+baseurl: ""
 permalink: pretty
 
 # Gems
@@ -33,9 +32,9 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Mark Otto
-  url: https://twitter.com/mdo
-  email: markdotto@gmail.com
+  name: Mediazona
+  url: https://zona.media
+  
 
 # Custom vars
 version: 3.0.0
@@ -43,7 +42,7 @@ version: 3.0.0
 # Navbar page list
 nav:
   - title: Blog
-    url: /dark-poole/archive
+    url: /archive
 
   - title: About
-    url: /dark-poole/about
+    url: /about
